--- a/templates/index.html
+++ b/templates/index.html
@@ -103,6 +103,8 @@
 
     <div id="toastContainer" class="toast-wrapper"></div>
 
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.0.6/purify.min.js"></script>
     <script src="{{ url_for('static', filename='js/app.js') }}"></script>
 </body>
 
